--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
@@ -15,31 +15,33 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-    <script src='https://maps.googleapis.com/maps/api/js?sensor=false'></script>
-    <script src="lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
-
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <script src="lib/lodash/dist/lodash.min.js"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDHym6cu_bXDMknWVdzKF3wKoh4NZ8KePM&senson=true"></script>
+
 
     <!-- your app's js -->
     <script src="app/app.js"></script>
+
     <script src="app/services/splitDealApi.js"></script>
 
-    <script src="app/watchlist/watch-list-ctrl.js"></script>
     <script src="app/watchlist/watch-list-details-ctrl.js"></script>
+    <script src="app/watchlist/watch-list-ctrl.js"></script>
     <script src="app/nearme/near-me-ctrl.js"></script>
+    <script src="app/directives/directives.js"></script>
 
-  </head>
-  <body ng-app="SplitDealApp">
-    <!--
-      The nav bar that will be updated as we navigate between views.
-    -->
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
-    </ion-nav-bar>
 
-    <ion-nav-view></ion-nav-view>
-  </body>
+</head>
+<body ng-app="SplitDealApp">
+<!--
+  The nav bar that will be updated as we navigate between views.
+-->
+<ion-nav-bar class="bar-stable">
+    <ion-nav-back-button>
+    </ion-nav-back-button>
+</ion-nav-bar>
+
+<ion-nav-view></ion-nav-view>
+</body>
 </html>
