--- a/www/app/watchlist/watch-list-details.html
+++ b/www/app/watchlist/watch-list-details.html
@@ -4,7 +4,7 @@
             <i class="ion-chevron-left"></i> Back
         </ion-nav-back-button>
         <ion-nav-title>
-            <a class="button button-clear ion-ios7-location-outline"> map view </a>
+            <a class="button button-clear ion-ios7-location-outline" ui-sref="tab.location-map({id:vm.itemId})"> map view </a>
         </ion-nav-title>
     </ion-nav-bar>
 
