--- a/platforms/android/assets/www/app/mydeals/mydeals.html
+++ b/platforms/android/assets/www/app/mydeals/mydeals.html
@@ -1,7 +1,20 @@
 <ion-view view-title="My Deals" ng-controller="MydealsCtrl">
     <ion-content>
 
-        <h2>{{message}}</h2>
+        <div class="card">
+            <div class="item item-divider">
+                Take a picture
+            </div>
+            <div class="item item-image">
+                <img class="item" ng-src="{{cameraimage}}" style="height: 350px;"/>
+            </div>
+        </div>
+
+        <div class="padding">
+            <button class="button button-block button-positive" ng-click="takePicture()">
+                Take Photo
+            </button>
+        </div>
 
     </ion-content>
 </ion-view>
