--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -11,15 +11,17 @@
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
-
     <!-- ionic/angularjs js -->
+
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+
+    <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
+    <script src="lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <script src="lib/lodash/dist/lodash.min.js"></script>
-    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDHym6cu_bXDMknWVdzKF3wKoh4NZ8KePM&senson=true"></script>
 
     <!-- your app's js -->
     <script src="app/app.js"></script>
@@ -32,8 +34,7 @@
     <script src="app/settings/barcodeScanner.ctrl.js"></script>
     <script src="app/login/login-ctrl.js"></script>
     <script src="app/mydeals/mydeals-ctrl.js"></script>
-    <script src="app/directives/directives.js"></script>
-
+    <script src="app/nearme/location-map-ctrl.js"></script>
 
 </head>
 <body ng-app="SplitDealApp" class="platform-android platform-cordova platform-webview">
