bottom tabs are fixed

--- a/platforms/android/assets/www/app/mydeals/mydeals.html
+++ b/platforms/android/assets/www/app/mydeals/mydeals.html
@@ -1,6 +1,5 @@
 <ion-view view-title="My Deals" ng-controller="MydealsCtrl">
     <ion-content>
-
         <div class="card">
             <div class="item item-divider">
                 Take a picture
@@ -11,10 +10,10 @@
         </div>
 
         <div class="padding">
-            <button class="button button-block button-positive" ng-click="takePicture()">
-                Take Photo
+            <button
+                    class="button button-block button-positive"
+                    ng-click="takePicture()">Take Photo
             </button>
         </div>
-
     </ion-content>
 </ion-view>
