--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -11,21 +11,21 @@
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
-    <!-- ionic/angularjs js -->
 
+    <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
 
-    <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
-    <script src="lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
-
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+
     <script src="lib/lodash/dist/lodash.min.js"></script>
+    <script src='http://maps.googleapis.com/maps/api/js?sensor=false'></script>
+    <script src="lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
+    <script src="lib/angular-cache/dist/angular-cache.min.js"></script>
 
     <!-- your app's js -->
     <script src="app/app.js"></script>
-
     <script src="app/services/splitDealApi.js"></script>
 
     <script src="app/watchlist/watch-list-details-ctrl.js"></script>
@@ -39,7 +39,8 @@
 </head>
 <body ng-app="SplitDealApp" class="platform-android platform-cordova platform-webview">
     <!--The nav bar that will be updated as we navigate between views.-->
-    <ion-nav-bar class="bar-stable"></ion-nav-bar>
+    <ion-nav-bar></ion-nav-bar>
+
     <ion-nav-view></ion-nav-view>
 </body>
 </html>
