--- a/www/app/signup/signup.html
+++ b/www/app/signup/signup.html
@@ -1,7 +1,7 @@
 <ion-view>
     <ion-nav-bar>
         <ion-nav-back-button class="button-clear">
-            <i class="ion-chevron-left"></i> Back
+            <i class="ion-chevron-left"></i> back
         </ion-nav-back-button>
     </ion-nav-bar>
 
