--- a/www/app/watchlist/watchlist.html
+++ b/www/app/watchlist/watchlist.html
@@ -11,7 +11,7 @@
 
     <ion-content>
         <div class="list">
-            <div class="item item-divider item-positive item-button-right">
+            <div class="item item-positive item-button-right">
                 Your Watch
                 <button class="button button-light button-clear">
                     <small>View All</small>
@@ -25,7 +25,7 @@
                 </a>
             </div>
 
-            <div class="item item-divider item-positive item-button-right">
+            <div class="item item-positive item-button-right">
                 My Listing
                 <button class="button button-light button-clear">
                     <small>View All</small>
