search and refine screens

--- a/platforms/android/assets/www/app/watchlist/watchlist.html
+++ b/platforms/android/assets/www/app/watchlist/watchlist.html
@@ -3,7 +3,10 @@
         <div class="bar bar-header item-input-inset">
             <label class="item-input-wrapper">
                 <i class="icon ion-ios7-search placeholder-icon"></i>
-                <input type="search" placeholder="Search"  value="{{scanResult.text}}">
+                <input type="search"
+                       placeholder="Search"
+                       value="{{scanResult.text}}"
+                       ui-sref="custom-search" />
             </label>
             <a class="button button-clear icon-right ion-ios7-barcode button-stable" ng-click="scan()"></a>
         </div>
@@ -11,7 +14,7 @@
 
     <ion-content>
         <div class="list">
-            <div class="item item-divider item-positive item-button-right">
+            <div class="item item-positive item-button-right">
                 Your Watch
                 <button class="button button-light button-clear">
                     <small>View All</small>
@@ -25,7 +28,7 @@
                 </a>
             </div>
 
-            <div class="item item-divider item-positive item-button-right">
+            <div class="item item-positive item-button-right">
                 My Listing
                 <button class="button button-light button-clear">
                     <small>View All</small>
