--- a/platforms/android/assets/www/app/favourite/favourite.html
+++ b/platforms/android/assets/www/app/favourite/favourite.html
@@ -1,5 +1,10 @@
-<ion-view view-title="Favourite">
-    <ion-content class="padding">
-        <h2>Favourite</h2>
+<ion-view view-title="My Favourite Listings">
+    <ion-content >
+        <div class="bar bar-positive item-button-right">
+            <a class="button button-light button-clear">
+                sort
+            </a>
+        </div>
+
     </ion-content>
 </ion-view>
