--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -33,7 +33,7 @@
     <script src="app/nearme/near-me-ctrl.js"></script>
     <script src="app/settings/barcodeScanner.ctrl.js"></script>
     <script src="app/login/login-ctrl.js"></script>
-    <script src="app/mydeals/mydeals-ctrl.js"></script>
+    <script src="app/post/post-ctrl.js"></script>
     <script src="app/nearme/location-map-ctrl.js"></script>
 
 </head>
