--- a/www/app/watchlist/watch-list-details.html
+++ b/www/app/watchlist/watch-list-details.html
@@ -1,6 +1,8 @@
 <ion-view ng-controller="WatchListDetailCtrl as vm">
     <ion-nav-bar class="bar-stable">
-        <ion-nav-back-button></ion-nav-back-button>
+        <ion-nav-back-button class="button button-clear">
+            <i class="ion-chevron-left"></i> back
+        </ion-nav-back-button>
         <ion-nav-title>
             <a class="button button-clear ion-ios7-location-outline"
                ui-sref="tab.location-map({id:vm.itemId})">
