--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -35,6 +35,8 @@
     <script src="app/login/login-ctrl.js"></script>
     <script src="app/post/post-ctrl.js"></script>
     <script src="app/nearme/location-map-ctrl.js"></script>
+    <script src="app/custom-search/custom-search-ctrl.js"></script>
+    <script src="app/refine/refine-ctrl.js"></script>
 
 </head>
 <body ng-app="SplitDealApp" class="platform-android platform-cordova platform-webview">
