--- a/platforms/android/assets/www/app/nearme/nearme.html
+++ b/platforms/android/assets/www/app/nearme/nearme.html
@@ -10,7 +10,7 @@
         </ion-nav-title>
 
         <ion-nav-buttons side="secondary">
-            <button class="button button-clear" ng-click="doSomething()">
+            <button class="button button-clear" ui-sref="refine" >
                 Refine
             </button>
         </ion-nav-buttons>
