--- a/platforms/android/assets/www/app/watchlist/watchlist.html
+++ b/platforms/android/assets/www/app/watchlist/watchlist.html
@@ -14,6 +14,9 @@
 
     <ion-content>
         <div class="list">
+            <div class="item item-stable">
+                Welcome username | <a href="#" class="button  button-small button-clear" >Sign out</a>
+            </div>
             <div class="item item-positive item-button-right">
                 Your Watch
                 <button class="button button-light button-clear">
