post back to database

--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <!-- your app's js -->
     <script src="app/app.js"></script>
     <script src="app/services/splitDealApi.js"></script>
+    <script src="app/services/salePostDataApi.js"></script>
 
     <script src="app/custom-search/custom-search-ctrl.js"></script>
     <script src="app/login/login-ctrl.js"></script>
@@ -37,6 +38,7 @@
     <script src="app/settings/barcodeScanner.ctrl.js"></script>
     <script src="app/watchlist/watch-list-details-ctrl.js"></script>
     <script src="app/watchlist/watch-list-ctrl.js"></script>
+    <script src="app/post/sale-post.js"></script>
 
 </head>
 <body ng-app="SplitDealApp">
