--- a/www/app/Refine/refine.html
+++ b/www/app/Refine/refine.html
@@ -1,6 +1,6 @@
 <ion-view>
     <ion-nav-bar class="bar bar-header bar-stable">
-        <ion-nav-back-button class="button button-clear">
+        <ion-nav-back-button class="button-clear">
             <i class="ion-chevron-left"></i> back
         </ion-nav-back-button>
         <ion-nav-title>
